<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name" translatable="false">AnyControl</string>
    <string name="app_error" translatable="false">AnyControl ERROR</string>
    <string name="create_command">Create command</string>
    <string name="create_object">Create object</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_map">Settings map</string>
    <string name="action_go_command">Command</string>
    <string name="action_add_object">Create object</string>
    <string name="action_list_object">List objects</string>
    <string name="map">Map</string>
    <string name="list_track">Track list</string>
    <string name="action_add_command">Create command</string>
    <string name="action_remove_command">Del command</string>
    <string name="action_add_favorite">Add to favorite</string>
    <string name="setting">Setting</string>
    <string name="name_object">Name object:</string>
    <string name="phone_number">Phone number:</string>
    <string name="edit">Edit</string>
    <string name="end_edit">End edit</string>
    <string name="end_del">End del</string>
    <string name="del_object">Del</string>
    <string name="empty_for_send">Empty commands</string>
    <string name="send_immediately">Send immediately</string>
    <string name="title_select_obj">Select object</string>
    <string name="device_name">Name object</string>
    <string name="command_name">Name command</string>
    <string name="code_command">Code</string>
    <string name="select_enabled_device">Select enabled device</string>
    <string name="select_obj">Select object</string>
    <string name="select">Select</string>
    <string name="send">Send</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_and_close">Save and close</string>
    <string name="home">Favorites</string>
    <string name="all_commands">All commands</string>
    <string name="history">History</string>
    <string name="edit_default_value">Please edit default number</string>
    <string name="list_servers_title">Servers</string>

    <string-array name="array_servers">
        <item>M2 gps-tracker.com.ua</item>
        <item>NaviZone navi.zone</item>
    </string-array>

    <string name="web" translatable="false"><![CDATA[<html><meta charset=\"utf-8\"><body><p style=\"color:#A0A0A0;text-indent: 20px; text-align: justify;\">{content}</p></body></html> ]]></string>
    <string name="multiple_send_help">Allows you to select multiple commands</string>
    <string name="start_on_map_help">Start application on map activity</string>
    <string name="server_url">Server URL where device use</string>
    <string name="server_url_title">Server URL</string>
    <string name="server_login_title">Login</string>
    <string name="server_pass_title">Password</string>
    <string name="server_pass">Password on a server</string>
    <string name="server_protocol">Protocol type</string>
    <string name="server_protocol_title">Protocol use</string>
    <string name="server_login">Login on server</string>

    <string name="multiple_send">Multiple sending</string>
    <string name="start_on_map">Start on map</string>
    <string name="confirm_send">Request confirmation</string>
    <string name="confirm_send_help">Ask for confirmation before sending SMS</string>
    <string name="total_in_history_title">Amount commands in the history memory </string>
    <string name="count_command_history_title">The number of commands in the history at the start</string>
    <string name="count_command_history">The total number of commands that will be remembered history</string>
    <string name="count_command_history_in_start_title">The number of commands in the history displayed at startup</string>
    <string name="count_command_history_in_start">The number of commands in the history displayed when the application starts. The more teams, the more difficult the application will load the first time</string>
    <string name="load_from_cd_card">Load from CD card</string>
    <string name="create_a_route">Create a route</string>
    <string name="from_current_position">From current position</string>
    <string name="from_map_click">From on map click</string>
    <string name="to_object">To select object</string>
    <string name="to_map_click_position">To map click position</string>
    <string name="path_to_save_maps">Path storage map tiles</string>
    <string name="web_storage_path_tile">Path on external cd card card storage for OSM offline mode (0.5гБ)</string>
</resources>
