<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_object"
        android:orderInCategory="0"
        android:title="@string/action_add_object"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list_object"
        android:orderInCategory="1"
        android:title="@string/action_list_object"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_command"
        android:orderInCategory="2"
        android:title="@string/action_add_command"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_command"
        android:orderInCategory="2"
        android:title="@string/action_remove_command"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_favorite"
        android:orderInCategory="3"
        android:title="@string/action_add_favorite"
        app:showAsAction="never" />
</menu>
